 but still one should avoid high volume levels for these machines (~24 and above, for example on Nascar)
Improved AT91 core emulation features & fix Whitestar II-JIT-speedup crashes on startup
Slightly improved FM sound emulation cores (like AY8910, YMF262 and YM2151: so a lot of Gottlieb generations, old Ballys, pre-DCS games, etc)
Improved HC55516 CVSD sound core (Gorgar up to Twilight Zone, etc) and add some lowpass filtering (active only on older machines) to remove some of the audible noise
Slightly lowpass filter DCS sound core (Indiana Jones and up) to remove some of the audible noise
Improved GTS80BS/GTS3 DAC sound core
Improved GTS80SS DAC sound core (Haunted House, Black Hole, Mars God of War, etc)
Improved DMD brightness level mapping for Gottlieb GTS3s

*** ROM SUPPORT *** Thanks to Timmo, Chad Hendrickson, Inkochnito
Kinda new:
Star Wars 20th Anniversary 1.06
Tommy 5.00 (unofficial MOD)

Clones:
Laser Cue L-3 (Neverending Bell Fix)
Stargate rev.5



Version 2.7 (June 08th, 2016) - "Alive and kicking"
------------------------------------------------------------------------------

*** CORE/CPU ***
64bit compilation supported
XMAME port for unix/linux systems
PROC support (needs special compile with PROC_SUPPORT defined) to drive (at least) real WPC machines with PinMAME/PROC

New S14001A sound core for old Sterns (Catacomb, Flight 2000, Freefall, Lightning, Orbitor 1, and Split Second)
Improved BSMT2000 sound core for Sega, Alvin G., Data East (Batman and newer), and Stern (up to Terminator 3) DMD generation games
Improved AT91 sound core for the rest of the Stern DMDs (Elvis, LOTR, RBION, Sopranos, Nascar/Grand Prix/Dale Jr.)
Improved Brave Team sound core

*** ROM SUPPORT *** Thanks to Inkochnito, Soren
New:
MAC: MAC Jungle (1995 version)
Sleic: Bike Race (2-ball play) (not working yet)
Sonic: Hang-On
Unknown: Wild Texas (Firepower II Modification)

Clones:
Bram Stoker's Dracula L-2C (competition MOD)